footer no longer covering content

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Lato:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Lato:wght@300&display=swap");
+.footer::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 .footer {
   font-family: "Lato", sans-serif;
   display: flex;
@@ -110,6 +116,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30%;
   }
   .wrapper .homewrapper {
     border: 5px double #d62828;
