--- a/src/sass/_Home.scss
+++ b/src/sass/_Home.scss
@@ -11,6 +11,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 30%;
+
         .homewrapper{
             border: 5px double #d62828;
             width: 90%;
