--- a/src/sass/_NavBar.scss
+++ b/src/sass/_NavBar.scss
@@ -1,10 +1,15 @@
 @import 'fonts';
 @import 'columns';
 
+.footer::after{
+  @include row;
+}
+
 .footer {
   font-family: $body-font;
   display: flex;
   position: fixed;
+  // height: 100px;
   bottom: 0;
   width: $col-12;
   background-color: #E9ECEF;
